# rust-test

./: .vimspector.json  Cargo.toml
.github/workflows/: api.yml  build-api.yml  build.yml  deploy.yml  test.yml
api/: Cargo.toml  README.md
api/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  name_entry.rs
iac/: agent-dependencies.yaml  resources.yaml
src/: main.rs
